[package]
name = "auria-network"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/auria-core/auria-runtime"
authors = ["AURIA Team <auria@dust.llc>"]
description = "AURIA Runtime Core - HTTP/gRPC networking"

[dependencies]
auria-core = { path = "../auria-core", version = "0.1.0"}
auria-execution = { path = "../auria-execution", version = "0.1.0"}
auria-config = { path = "../auria-config", version = "0.1.0"}
anyhow = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time", "signal"] }
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
tonic = "0.10"
prost = "0.12"
